nginx-ingress-stack-configurable/app-ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-basic
  namespace: default # TBD: namespace
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer # TBD: issuer name
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret # TBD: basic auth secret name
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx # TBD: ingress class if different
  tls:
    - hosts:
        - www.gvm-chart.com # TBD: DNS name
      secretName: tls-secret # Use the already created tls-secret for initial testing
  rules:
    - host: www.gvm-chart.com # TBD: DNS name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web # TBD: service name
                port:
                  number: 80
