nginx-ingress-stack-configurable/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
spec:
  ingressClassName: nginx
  rules:
    - host: www.gvm-chart.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-oauth2-proxy
                port:
                  number: 80
